<resources>
    <string name="app_name">ShoeStore</string>
    <string name="ez_shoes">EZShoes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="plse_enter_email">Please enter both your email and password</string>
    <string name="plse_enter_password">Please enter password of 6 characters or more</string>
    <string name="valid_email">Valid email address required</string>
    <string name="saved_email">SAVED_EMAIL</string>
    <string name="saved_password">SAVED_PASSWORD</string>
    <string name="email_pref">EMAIL_PREF</string>
    <string name="password_pref">PASSWORD_PREF</string>
    <string name="not_registered">You have not registered yet. Create Account to register.</string>
    <string name="login">Login</string>
    <string name="login_pref">LOGIN_PREF</string>
    <string name="login_bool">LOGIN_BOOL</string>
    <string name="create_account">Create Account</string>
    <string name="login_button">login_button</string>
    <string name="create_button">create_button</string>
    <string name="email_textfield">email_textfield</string>
    <string name="password_textfield">password_textfield</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text_one">Welcome to EZShoes Store Inventory</string>
    <string name="welcome_text_two">Click button below to go to view instructions on how to use it.</string>
    <string name="to_instructions">> To Instructions View</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_txt">Scroll up to view more shoe items.\n\nTo add a new shoe, click + button to go to detail screen.\n\nAt detail screen, enter shoe details such as shoe name, company, size and description.\n\nClick Cancel to go back and Save to add new shoe.</string>
    <string name="to_shoe_list">> To Shoe List</string>
    <string name="shoe_list">Shoe List</string>
    <string name="detail">Detail</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_shoe_btn">Add Shoe Button</string>
    <string name="running_shoes">Running Shoes</string>
    <string name="eu_size">EU 30</string>
    <string name="nike">Nike</string>
    <string name="shoe_desc">Brand new running shoes. Rubber sole.</string>
    <string name="shoe_name_hint">Enter Shoe Name</string>
    <string name="shoe_size_hint">Enter Shoe Size</string>
    <string name="shoe_company_hint">Enter Shoe Company</string>
    <string name="shoe_desc_hint">Enter Shoe Description</string>
    <string name="plse_fill_in_all_fields">Please fill in all fields</string>

</resources>
