<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <!-- Constraint Layout is used, due to alignments between the relative positions of textviews and edittext views -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_end_color"
        tools:context=".screens.login.ShoeListFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/ez_shoes"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="172dp"
            android:text="@string/email"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="244dp"
            android:text="@string/password"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/Button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/ok_green_color"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" />

        <Button
            android:id="@+id/createBtn"
            style="@style/Button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="0.013" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.264"
            app:layout_constraintStart_toEndOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>