<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_end_color"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="268dp"
            android:layout_height="143dp"
            android:layout_marginTop="70dp"
            android:text="@string/welcome_text_one"
            android:textAlignment="center"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTv"
            android:layout_width="258dp"
            android:layout_height="93dp"
            android:layout_marginTop="68dp"
            android:text="@string/welcome_text_two"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTv" />

        <Button
            android:id="@+id/insBtn"
            style="@style/Button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="172dp"
            android:text="@string/to_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>